--- a/public/template/default/main/css/myCSS.css
+++ b/public/template/default/main/css/myCSS.css
@@ -3,30 +3,106 @@
     padding: 0px;
 }
 
+.get_coupon:hover,.go_lazada:hover {
+    color: yellow;
+    font-style: oblique;
+}
+
+p.end-time {
+    margin-left: 14px;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+.same_content {
+    display: none;
+}
+.show {
+    display: inline;
+}
+
+span.chitiet {
+    background: white;
+    color: #292b2c;
+    border-radius: 3px;
+    padding: 2px;
+    cursor: pointer;
+    margin: 5px;
+    text-decoration: underline;
+}
+.chitiet:hover{
+    color: #74d14c;
+    font-style: italic;
+    font-weight: bold;
+}
+
+
+img.image_show_lazada {
+    width: 24%;
+    position: absolute;
+    left: 38%;
+    top: 62%;
+}
+
+.btn_golazada {
+    text-align: center;
+    background: #fcbf12;
+    width: 272px;
+    margin: auto;
+    border-radius: 8px;
+    padding: 6px;
+    color: #291867;
+    font-weight: bold;
+    position: absolute;
+    top: 80%;
+    left: 24%;
+    text-decoration: none !important;
+}
+
+.copy_coupon {
+    text-align: center;
+    width: 130px;
+    height: 100px;
+    font-size: 16px;
+    /* margin:  auto; */
+    /* padding-top: 106px; */
+    display: table;
+    position: absolute;
+    /* padding-bottom: 28px; */
+    left: 39%;
+    top: 10%;
+    border: 4px solid #796500;
+    background: white;
+}
+
 
 .show_coupon {
     width: 40%;
-    height: 300px;
+    height: 260px;
     background: white;
-    margin: auto;
+    position: absolute;
+    left: 383px;
+    top: 243px;
+    /* box-shadow: -1px 1px 3px 4px #bbb483; */
 }
 
-img.image_show_lazada {
+img.image_logo {
     width: 20%;
-    margin-left: 40%;
+    left: 40%;
+    top: -60px;
+    position: relative;
 }
 #mymodal{
-     display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+   display: none; /* Hidden by default */
+   position: fixed; /* Stay in place */
+   z-index: 1; /* Sit on top */
+   padding-top: 100px; /* Location of the box */
+   left: 0;
+   top: 0;
+   width: 100%; /* Full width */
+   height: 100%; /* Full height */
+   /* overflow: auto; */ /* Enable scroll if needed */
+   background-color: rgb(0,0,0); /* Fallback color */
+   background-color: rgba(156, 149, 149, 0.63); /* Black w/ opacity */
 }
 
 /*
@@ -42,27 +118,32 @@ p.end-time {
 p.start-time {
     font-family: 'Roboto Condensed', sans-serif;
     margin-bottom: 0px;
-    margin-left: 10px;
+    margin-left: 14px;
 }
 
 img.image_lazada {
     width: 100px;
-    margin-left: 114px;
+    margin-left: 82px;
     margin-top: -5px;
     margin-bottom: 8px;
 }
 
-.get_coupon {
-    width: 200px;
+.get_coupon,.go_lazada {
+    width: 96px;
     height: 35px;
-    background: red;
-    margin: auto;
+    background: #215c91;
+    /* margin: auto; */
     padding: 6px;
     text-align: center;
-    border-radius: 8px;
-    margin-bottom: 5px;
+    /* border-radius: 8px; */
+    /* margin-bottom: 5px; */
     cursor: pointer;
     color: white;
+    text-decoration: none !important;
+    position: absolute;
+    top: 18%;
+    left: 70%;
+    font-weight: 500;
 }
 
 p.card-text.content_sale {
@@ -71,9 +152,10 @@ p.card-text.content_sale {
     font-family: 'Roboto Condensed', sans-serif;
     margin-left: 10px;
     margin-right: 2px;
+    margin-bottom: 0px;
 }
 
-h5.card-title.ten_khuyenmai {background: #74d14c;text-align: center;padding: 4px;color: white;}
+h5.card-title.ten_khuyenmai {background: #74d14c;text-align: center;padding: 4px;color: white;height: 67px;text-align: center;}
 
 h4.card-title.ten_khuyenmai {
     background: #74d14c;
@@ -83,11 +165,11 @@ h4.card-title.ten_khuyenmai {
 
 .card-block.khung_khuyenmai {
     padding: 0;
+    position: relative;
 }
 
 .card.card-height {
     height: 400px;
-    position: relative;
 }
 
 .container.wrap-coupon {
@@ -282,6 +364,50 @@ div#header ul li a:hover {
         padding: 0px;
     }
 
+.get_coupon,.go_lazada {
+    left: 58%;
+}
+
+img.image_lazada {
+    margin-left: 8px;
+}
+
+.close {
+    width: 29px;
+}
+
+a.btn_golazada {
+    position: absolute;
+    left: 1%;
+    right: 1%;
+}
+
+img.image_show_lazada {
+    position: absolute;
+    left: 36%;
+    width: 8rem;
+}
+
+.copy_coupon {
+    position: absolute;
+    left: 35%;
+}
+
+.show_coupon {
+    width: 96%;
+    left: 2%;
+    top: 29%;
+}
+
+img.image_logo {
+    width: 48%;
+    left: 27%;
+    position: relative;
+    top: -12%;
+}
+
+      
+
     #content .product h5.title {
         font-size: 1rem;
     }
@@ -304,6 +430,68 @@ div#header ul li a:hover {
 /* tablet */
 @media (min-width: 575px) and (max-width:767px) {
     *{}
+}
+@media (min-width: 767px) and (max-width: 992px) {
+    *{}
+
+a.btn_golazada {
+    left: 6%;
+}
+
+img.image_show_lazada {
+    left: 40%;
+}
+
+.copy_coupon {
+    left: 30%;
+}
+
+.show_coupon {
+    left: 32%;
+}
+
+img.image_logo {
+    width: 33%;
+}
+
+img.image_lazada {
+    margin-left: 5%;
+    width: 40%;
+}
+
+.get_coupon,.go_lazada {
+    left: 48%;
+}
+
+    
+}
+@media (min-width: 992px) and (max-width: 1200px){
+    *{}
+
+a.btn_golazada {
+    left: 17%;
+}
+
+.copy_coupon {
+    left: 35%;
+}
+
+.show_coupon {
+    left: 33%;
+    top: 21%;
+}
+
+img.image_logo {
+    width: 32%;
+}
+
+.get_coupon {
+    left: 60%;
+}
+
+img.image_lazada {
+    margin-left: 18%;
+}
 }
 /* //tablet */
 
